--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-codemirror2": "^7.1.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "remove-markdown": "^0.3.0"
   },
