--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.2",
+    "classnames": "^2.2.6",
     "codemirror": "^5.52.2",
     "react": "^16.13.1",
     "react-codemirror2": "^7.1.0",
