--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "remove-markdown": "^0.3.0"
+    "remove-markdown": "^0.3.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
